# alpine-language-server

./: .gitignore  README  build.zig  build.zig.zon  debug.lua  htmx.test.html  test.html
client/vscode/: README.md  extention.js  package-lock.json  package.json  pnpm-lock.yaml
lsp_server/: Connection.zig  Header.zig  Message.zig  lsp_server.zig  lsp_types.zig  util.zig
src/: DocumentStore.zig  Server.zig  TSQuerier.zig  TreeSitter.zig  main.zig
src/alpinejs/: alpinejs.zig
src/alpinejs/attributes/: x-bind.md  x-cloak.md  x-data.md  x-effect.md  x-for.md  x-html.md  x-id.md  x-if.md  x-ignore.md  x-init.md  x-model.md  x-modelable.md  x-on.md  x-ref.md  x-show.md  x-teleport.md  x-text.md  x-transition.md
src/alpinejs/magics/: $dispatch.md  $el.md  $refs.md  $store.md  $watch.md
src/lib/: Channel.zig
src/lib/lsp_server/: Connection.zig  Header.zig  Message.zig  lsp_types.zig  util.zig
swc/: Cargo.toml
swc/include/: swc.h
swc/src/: lib.rs
