[package]
name = "swc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0"
swc_common = {version = "0.33.12", features = ["sourcemap", "tty-emitter"]}
swc_ecma_parser = "0.141.33"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
